# perf-vibe

./: .gitignore  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  install.sh  perfvibe-cli.py  pyproject.toml
.atl/: .skill-registry.cache.json  skill-registry.md
.claude/skills/perf-cli-standards/: SKILL.md
.claude/skills/python-architecture/: SKILL.md
.claude/skills/python-style/: SKILL.md
.claude/skills/python-style/assets/: pyproject-tooling.toml
.claude/skills/python-testing/: SKILL.md
.engram/: config.json
.github/workflows/: ci.yml
docs/specs/budget-check/: design.md  spec.md  tasks.md  verify-report.md
docs/specs/compare/: proposal.md  verify-report.md
docs/specs/init-command/: design.md  proposal.md  spec.md  tasks.md  verify-report.md
docs/specs/perf-run/: README.md  design.md  proposal.md  spec.md  tasks.md
examples/demo-budget-check/: .gitignore  README.md  perf.toml  seed.py
examples/demo-compare/: README.md  perf.toml  seed.py
examples/demo-compare/fixtures/: baseline-flashlight.json  baseline-logcat.txt  regression-flashlight.json  regression-logcat.txt
examples/demo-run/: .gitignore  README.md  flashlight.json  logcat.txt  perf.toml
openspec/: config.yaml
openspec/changes/archive/: budget-check.md  compare.md  init-command.md  perf-run.md
openspec/changes/budget-check/: design.md  proposal.md  spec.md  tasks.md
openspec/changes/compare/: design.md  spec.md  tasks.md
openspec/specs/: compare.md  init-command.md  perf-run.md
src/perf/adapters/: __init__.py  analyzer_sql.py  clock_system.py  commit_log_git.py  context_bash_perfmeta.py  driver_maestro.py  driver_manual.py  driver_replay.py  markers_adb_logcat.py  process.py  registry.py  sampler_flashlight.py  store_sqlite.py
src/perf/application/: budget_check_flow.py  run_flow.py
src/perf/cli/: __init__.py  banner.py  main.py
src/perf/cli/commands/: budget_check.py  compare.py  init.py  run.py
src/perf/cli/output/: budget_check_pretty.py  compare_pretty.py  context.py  json_reporter.py  pretty.py
src/perf/config/: loader.py
src/perf/contracts/: budget_check_v1.py  compare_v1.py  init_v1.py  json_v1.py
src/perf/db/: schema.sql
src/perf/db/migrations/: 0001_init.sql  0002_compare_baseline_index.sql
src/perf/domain/: budget.py  calibration.py  model.py  ports.py  regression.py  statistics.py
tests/: conftest.py  fakes.py
tests/contract/: test_budget_check_v1.py  test_compare_v1_contract.py  test_init_v1_contract.py  test_json_v1_contract.py
tests/fixtures/: flashlight_sample.json  logcat_sample.txt
tests/fixtures/flows/: missing_header.yaml  no_separator.yaml
tests/fixtures/flows/subflows/: login-fragment.yaml  util.yml
tests/fixtures/flows_mismatch/: app_b.yaml
tests/golden/: test_budget_check_pretty_golden.py  test_compare_pretty_golden.py  test_init_pretty_golden.py  test_pretty_confirmation_golden.py
tests/golden/fixtures/: banner.txt  budget_check_detail_checkout.txt  budget_check_summary_fail.txt  budget_check_summary_pass.txt  budget_check_summary_skipped.txt  compare_insufficient_data.txt  compare_max_eq_min.txt  compare_normal.txt  compare_regression.txt  compare_single_point.txt  init_comment_loss_confirm_prompt.txt  init_comment_loss_error.txt  init_fresh_create_summary.txt  init_merge_added_flows_summary.txt  init_mismatch_prompt.txt  run_confirmation.txt
tests/integration/: test_analyzer_sql.py  test_cli_budget_check.py  test_cli_compare.py  test_cli_compare_replay.py  test_cli_init.py  test_cli_init_wizard.py  test_cli_replay.py  test_cli_run.py  test_compare_perf.py  test_context_bash_perfmeta.py  test_driver_maestro.py  test_driver_manual.py  test_driver_replay.py  test_markers_adb_logcat.py  test_registry.py  test_sampler_flashlight.py  test_schema.py  test_store_baseline.py  test_store_ingestion.py  test_store_migrations.py
tests/unit/: test_application_boundary.py  test_banner.py  test_budget.py  test_budget_check_flow.py  test_calibration.py  test_commit_log_git.py  test_config_loader.py  test_domain_boundary.py  test_init_discover.py  test_init_merge.py  test_init_parse_app_id.py  test_init_reconcile.py  test_init_serialize.py  test_model.py  test_output_context.py  test_regression.py  test_run_flow.py  test_scrub_secrets.py  test_statistics.py  test_store_migration_version.py
