[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "perf"
version = "0.1.0"
description = "Local-first performance lab CLI: run Maestro flows, capture markers + Flashlight samples, persist and compare against local history."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "typer>=0.12",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "hypothesis>=6.100",
]

[project.scripts]
# Command name is `perfvibe` (not `perf`) to avoid colliding with the Linux
# kernel profiler `perf`. The Python package stays `perf` internally.
perfvibe = "perf.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
perf = ["db/schema.sql", "db/migrations/*.sql"]

[tool.pytest.ini_options]
testpaths = ["tests"]
