[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "perf"
version = "0.1.0"
description = "Local-first performance lab CLI: run Maestro flows, capture markers + Flashlight samples, persist and compare against local history."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "typer>=0.12",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "hypothesis>=6.100",
    "ruff>=0.6",
    "mypy>=1.11",
]

[project.scripts]
# Command name is `perfvibe` (not `perf`) to avoid colliding with the Linux
# kernel profiler `perf`. The Python package stays `perf` internally.
perfvibe = "perf.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
perf = ["db/schema.sql", "db/migrations/*.sql"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
# Pragmatic, high-signal rule set — not everything-on. E: pycodestyle,
# F: pyflakes, I: isort, UP: pyupgrade, B: bugbear, SIM: simplify,
# C4: comprehensions, PTH: prefer pathlib, RUF: ruff-specific.
select = ["E", "F", "I", "UP", "B", "SIM", "C4", "PTH", "RUF"]
# BLE001 (blind-except) is allowed ONLY at the documented exit-code guards,
# which annotate it inline with `# noqa: BLE001` — so it stays off the global
# ignore list and every use must be justified at the call site.

[tool.ruff.lint.per-file-ignores]
# Tests may use assert and slightly longer lines for fixtures/expectations.
"tests/**" = ["E501"]

[tool.mypy]
python_version = "3.11"
files = ["src/perf"]
disallow_untyped_defs = true
warn_unused_ignores = true
warn_redundant_casts = true
no_implicit_optional = true
# typer/rich ship their own types; add per-module overrides here only if a
# third-party stub is genuinely missing.
