[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "perf"
version = "0.1.0"
description = "Local-first performance lab CLI: run Maestro flows, capture markers + Flashlight samples, persist and compare against local history."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "typer>=0.12",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "hypothesis>=6.100",
    # Upper-bounded on purpose. `ruff>=0.6` was unbounded, so CI silently
    # installed 0.16 while a developer venv sat on 0.15 — and 0.16 began
    # formatting Python code blocks inside Markdown, which 0.15 never did.
    # The result was the worst possible failure mode: the exact same commands
    # passed locally and failed in CI. Keep the floor and the ceiling on the
    # same minor line so "green locally" keeps predicting "green in CI"; bump
    # both together, deliberately, after checking the formatter's changelog.
    "ruff>=0.16,<0.17",
    "mypy>=1.11",
]

[project.scripts]
# Command name is `perfvibe` (not `perf`) to avoid colliding with the Linux
# kernel profiler `perf`. The Python package stays `perf` internally.
perfvibe = "perf.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
perf = ["db/schema.sql", "db/migrations/*.sql"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.coverage.run]
source = ["perf"]
branch = true

[tool.coverage.report]
# Measured at 96% when the gate was introduced. The floor sits a few points
# below so an honest local dip does not block a merge, while a real drop still
# fails the build. Raise it when coverage genuinely improves; do not lower it
# to make a red build green.
fail_under = 93
show_missing = true

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
# Pragmatic, high-signal rule set — not everything-on. E: pycodestyle,
# F: pyflakes, I: isort, UP: pyupgrade, B: bugbear, SIM: simplify,
# C4: comprehensions, PTH: prefer pathlib, RUF: ruff-specific.
select = ["E", "F", "I", "UP", "B", "SIM", "C4", "PTH", "RUF"]
# BLE001 (blind-except) is allowed ONLY at the documented exit-code guards,
# which annotate it inline with `# noqa: BLE001` — so it stays off the global
# ignore list and every use must be justified at the call site.

[tool.ruff.lint.per-file-ignores]
# Tests may use assert and slightly longer lines for fixtures/expectations.
"tests/**" = ["E501"]

[tool.ruff.format]
# ruff >=0.16 formats Python code blocks embedded in Markdown. Prose in this
# repo documents INTENT, not compilable code: design docs, PRDs and RFCs carry
# pseudo-code, elided bodies, and forward references to modules that do not
# exist yet (the `budget-check` design cited `perf.cli.commands.budget_check`
# before that CLI slice was written). Those snippets cannot satisfy a
# formatter, and bending them until they do would strip the shorthand that
# makes the document readable.
#
# Excluding Markdown wholesale rather than listing doc folders is deliberate:
# a per-folder list silently re-breaks CI the day someone adds `docs/rfcs/`.
# Python FILES are formatted exactly as before — this only stops the formatter
# from reaching into documentation.
exclude = ["*.md"]

[tool.mypy]
python_version = "3.11"
files = ["src/perf"]
disallow_untyped_defs = true
warn_unused_ignores = true
warn_redundant_casts = true
no_implicit_optional = true
# typer/rich ship their own types; add per-module overrides here only if a
# third-party stub is genuinely missing.
